force-app/main/default/objects/Tabla_Interest_Rate__c/Tabla_Interest_Rate__c.object-meta.xml
<CustomObject>
    <label>Tabla Interest Rate</label>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>Correlativo Interest Rate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabla Interest Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>