force-app/main/default/objects/Tabla_Interest_Rate__c/fields/Code_Index_Price__c.field-meta.xml
<CustomField>
    <fullName>Code_Index_Price__c</fullName>
    <label>Code Index Price</label>
    <length>25</length>
    <type>Text</type>
</CustomField>