force-app/main/default/objects/Tabla_Interest_Rate__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>IF(
CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7) &gt; 52,
52,
CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7)
)</formula>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>