force-app/main/default/objects/Tabla_Interest_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Index_Price__c</columns>
    <columns>Date__c</columns>
    <columns>Week__c</columns>
    <columns>Year__c</columns>
    <columns>Interest_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/6/2024 12:00 AM</value>
    </filters>
    <label>Todos</label>
</ListView>