force-app/main/default/objects/Tabla_Interest_Rate__c/listViews/Tabla.listView-meta.xml
<ListView>
    <fullName>Tabla</fullName>
    <columns>NAME</columns>
    <columns>Code_Index_Price__c</columns>
    <columns>Date__c</columns>
    <columns>Interest_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>5/29/2023</value>
    </filters>
    <label>Tabla</label>
</ListView>