force-app/main/default/objects/Tabla_Interest_Rate__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Code_Index_Price__c</columns>
    <columns>Date__c</columns>
    <columns>Interest_Rate__c</columns>
    <columns>Week__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This year</label>
</ListView>